--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
 @charset "UTF-8";
+/* Small screens */
+@media (max-width: 576px) {
+  header {
+    height: 60vh;
+  }
+  nav a {
+    font-size: 14px;
+    padding: 10px;
+    margin: 0 5px;
+  }
+  table {
+    padding-left: 0;
+  }
+}
 
+/* Medium screens */
+@media (min-width: 576px) and (max-width: 768px) {
+  header {
+    height: 70vh;
+  }
+  nav a {
+    font-size: 14px;
+    padding: 15px;
+    margin: 0 5px;
+  }
+}
+
+/* Large screens */
+@media (min-width: 768px) {
+  header {
+    height: 80vh;
+  }
+  nav a {
+    font-size: 16px;
+    padding: 20px;
+    margin: 0 10px;
+  }
+}
+
+/*
 * {
     margin: 0px;
     padding: 0px;
@@ -32,7 +71,7 @@ header {
     transition: color 0.4s ease;
    
  
-  }
+  } */
 
   nav > a:hover{
     color: white;
