--- a/style.css
+++ b/style.css
@@ -8,50 +8,82 @@
 }
 
 header {
-    background-image: url(imagens/header.webp);
-    background-size: cover;
-    background-position: top right;
-    background-repeat: no-repeat;
-    height: 99vh;
+  background-image: url(imagens/header.webp);
+  background-size: cover;
+  background-position: top right;
+  background-repeat: no-repeat;
+  height: 99vh;
+}
+
+@media (max-width: 768px) {
+  header {
+    background-size: contain;
+    height: 50vh;
   }
+}
 
 
+nav {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
   nav {
-    display: flex;
-    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: bottom;
   }
+}
+ nav a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  margin: 0 10px;
+  font-weight: bolder;
+  color: white;
+  padding: 20px;
   
+  transition: color 0.4s ease;
+}
+
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: left;
+  }
   nav a {
-    text-decoration: none;
-    color: black;
-    font-size: 16px;
-    margin: 0 10px;
-    font-weight: bolder;
-    color: white;
-    padding: 20px;
-    border: 2px solid red;
-    transition: color 0.4s ease;
-   
- 
-  } 
+    margin: 4px;
+    padding: 2px;
+    font-size: 14px;
+    border-width: 1px;
+    
+  }
+}
+
 
   nav > a:hover{
     color: white;
-    background-color: rgb(177, 36, 12);
+    background-color: red;
+    
   } 
-  
   table {
-   
-    float: left;
-    width: 95%;
+    width: 100%;
     max-width: 80%;
     margin: 0 auto;
     font-family: Arial, sans-serif;
     padding: 15px;
-    padding-left: 250px;
-
+    box-sizing: border-box;
+    overflow-x: auto;
   }
   
+  @media (max-width: 768px) {
+    table {
+      width: 100%;
+      padding: 15px 0;
+    }
+  }
+  
+ 
 th, td {
     border: 1px solid ;
     text-align: left;
@@ -67,14 +99,19 @@ th { background-color: lightgray;
 tr:hover {
     background-color: lightgray;
 }
-
-body{
-
-background-image: linear-gradient(to bottom, rgb(230, 29, 29),rgb(197, 113, 113));
-
+body {
+  background-image: linear-gradient(to bottom, red, rgb(230, 115, 115));
 }
 
-/*  ------------------------------------------*/
+@media screen and (min-width: 800px) {
+  body {
+    background-size: cover;
+    background-attachment: fixed;
+  }
+}
+
+
+/* ------------------------------------------*/
 
   
   
