--- a/style.css
+++ b/style.css
@@ -109,22 +109,21 @@ body {
 }
 
 
-/* ------------------------------------------*/
+/* ---------DIV IMAGENS COM FOTOS-----------------*/
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 .box {
   flex: 0 1 calc(25% - 20px);
-  margin: 0 80px;
   padding: 1px;
   box-sizing: border-box;
- 
 }
 
 .box img {
@@ -133,11 +132,45 @@ body {
   display: block;
   margin-bottom: 10px;
 }
+ 
+/*------------------DIV NOME FOTOS------------------*/
+
+.container2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin: 0 auto;
+}
+
+.nomes {
+  height: 10px;
+  width: 275px;
+  padding: 20px;
+  margin-bottom: 15px;
+  background-color: white;
+  border-radius: 20px;
+
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.2rem;
+  font-family: Arial, sans-serif;
+  color: #000000;
+}
+
+@media (max-width: 768px) {
+  .nomes {
+    margin-left: 0;
+  }
+}
+.nomes:hover{
+  background-color: red;
+  color: white;
+}
 
 
 
 
- /*--------------------------------------------------*/
 
 footer{
   background-color: black;
@@ -149,3 +182,7 @@ footer > a {
   color: white;
   text-decoration: underline;
 }
+
+
+
+
