--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body {
 
 
 /* ---------DIV IMAGENS COM FOTOS-----------------*/
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -132,7 +133,16 @@ body {
   display: block;
   margin-bottom: 10px;
 }
- 
+
+@media only screen and (max-width: 768px) {
+  .box {
+    flex-basis: calc(70% - 20px);
+  }
+  
+  .box img {
+    max-width: 100%;
+  }
+}
 /*------------------DIV NOME FOTOS------------------*/
 
 .container2 {
@@ -166,8 +176,9 @@ body {
 .nomes:hover{
   background-color: red;
   color: white;
+ 
+  
 }
-
 
 
 
