--- a/style.css
+++ b/style.css
@@ -177,11 +177,13 @@ body {
   background-color: red;
   color: white;
  
-  
+ 
 }
 
 
-
+a{
+  text-decoration: none;
+}
 
 footer{
   background-color: black;
