--- a/style.css
+++ b/style.css
@@ -164,14 +164,15 @@ body {
   margin-bottom: 15px;
   background-color: white;
   border-radius: 20px;
-
   text-align: center;
   line-height: 1.5;
   font-size: 1.2rem;
   font-family: Arial, sans-serif;
   color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 @media (max-width: 768px) {
   .nomes {
     margin-left: 0;
